// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should disable animations when disableAnimation=true 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  max-width: var(--nui-sizes-fit);
  height: var(--nui-sizes-8);
  padding: var(--nui-spaces-1-5);
}

.emotion-1 {
  outline: none;
  position: absolute;
  inset: 0;
  opacity: 0;
  cursor: inherit;
  z-index: 1;
}

.emotion-1:is(:-webkit-autofill, :autofill) {
  background-color: transparent!important;
  -webkit-transition: background-color 50000s ease-in-out 0s;
  transition: background-color 50000s ease-in-out 0s;
}

.emotion-1:is(:focus-visible, [data-focus-visible=true]):not(:disabled, [data-disabled=true])+*::before {
  outline: var(--nui-borders-md) var(--nui-colors-blue-primary);
  outline-offset: var(--nui-spaces-0-5);
}

.emotion-1:is(:hover, [data-hover=true]):not(:disabled, [data-disabled=true])+*::before {
  border-color: var(--nui-colors-gray-secondary);
}

.emotion-2 {
  position: relative;
  color: var(--nui-colors-blue-contrast-text);
  width: var(--nui-sizes-5);
  height: var(--nui-sizes-5);
  font-size: var(--nui-font-sizes-sm);
}

.emotion-2::before {
  content: "";
  position: absolute;
  inset: 0;
  border: var(--nui-borders-md);
  border-color: var(--nui-colors-gray-highlight);
  background: transparent;
  z-index: -2;
  border-radius: calc(var(--nui-radii-xl) * .6);
}

.emotion-2::after {
  content: "";
  position: absolute;
  inset: 0;
  background-color: var(--nui-colors-blue-primary);
  opacity: 0;
  z-index: -1;
  border-radius: calc(var(--nui-radii-xl) * .6);
}

.emotion-3 {
  -webkit-margin-start: var(--nui-spaces-2);
  margin-inline-start: var(--nui-spaces-2);
  font-size: var(--nui-font-sizes-md);
}

<label
  class="nui-checkbox-root emotion-0"
  data-checked="false"
  data-color="blue"
  data-disable-animation="true"
  data-disabled="false"
  data-in-group="false"
  data-indeterminate="false"
  data-radius="md"
  data-size="md"
>
  <input
    aria-label="Checkbox"
    aria-labelledby="checkbox-_r_19_-label"
    class="nui-checkbox-input emotion-1"
    tabindex="0"
    type="checkbox"
  />
  <span
    class="nui-checkbox-icon emotion-2"
  />
  <span
    class="nui-checkbox-label emotion-3"
    id="checkbox-_r_19_-label"
  >
    Checkbox
  </span>
</label>
`;

exports[`Checkbox should disable animations when disableAnimation=true 2`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  max-width: var(--nui-sizes-fit);
  height: var(--nui-sizes-8);
  padding: var(--nui-spaces-1-5);
}

.emotion-1 {
  outline: none;
  position: absolute;
  inset: 0;
  opacity: 0;
  cursor: inherit;
  z-index: 1;
}

.emotion-1:is(:-webkit-autofill, :autofill) {
  background-color: transparent!important;
  -webkit-transition: background-color 50000s ease-in-out 0s;
  transition: background-color 50000s ease-in-out 0s;
}

.emotion-1:is(:focus-visible, [data-focus-visible=true]):not(:disabled, [data-disabled=true])+*::before {
  outline: var(--nui-borders-md) var(--nui-colors-blue-primary);
  outline-offset: var(--nui-spaces-0-5);
}

.emotion-1:is(:hover, [data-hover=true]):not(:disabled, [data-disabled=true])+*::before {
  border-color: var(--nui-colors-gray-secondary);
}

.emotion-2 {
  position: relative;
  color: var(--nui-colors-blue-contrast-text);
  width: var(--nui-sizes-5);
  height: var(--nui-sizes-5);
  font-size: var(--nui-font-sizes-sm);
}

.emotion-2::before {
  content: "";
  position: absolute;
  inset: 0;
  border: var(--nui-borders-md);
  border-color: var(--nui-colors-gray-highlight);
  background: transparent;
  z-index: -2;
  border-radius: calc(var(--nui-radii-xl) * .6);
}

.emotion-2::after {
  content: "";
  position: absolute;
  inset: 0;
  background-color: var(--nui-colors-blue-primary);
  opacity: 1;
  z-index: -1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: calc(var(--nui-radii-xl) * .6);
}

.emotion-3 {
  -webkit-margin-start: var(--nui-spaces-2);
  margin-inline-start: var(--nui-spaces-2);
  font-size: var(--nui-font-sizes-md);
}

<label
  class="nui-checkbox-root emotion-0"
  data-checked="true"
  data-color="blue"
  data-disable-animation="true"
  data-disabled="false"
  data-in-group="false"
  data-indeterminate="false"
  data-radius="md"
  data-size="md"
>
  <input
    aria-label="Checkbox"
    aria-labelledby="checkbox-_r_19_-label"
    class="nui-checkbox-input emotion-1"
    tabindex="0"
    type="checkbox"
  />
  <span
    class="nui-checkbox-icon emotion-2"
  >
    <svg
      aria-hidden="true"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m7 12.9l3.143 3.6L18 7.5"
        pathLength="1"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <span
    class="nui-checkbox-label emotion-3"
    id="checkbox-_r_19_-label"
  >
    Checkbox
  </span>
</label>
`;

exports[`Checkbox should render with default props 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  max-width: var(--nui-sizes-fit);
  height: var(--nui-sizes-8);
  padding: var(--nui-spaces-1-5);
}

.emotion-1 {
  outline: none;
  position: absolute;
  inset: 0;
  opacity: 0;
  cursor: inherit;
  z-index: 1;
}

.emotion-1:is(:-webkit-autofill, :autofill) {
  background-color: transparent!important;
  -webkit-transition: background-color 50000s ease-in-out 0s;
  transition: background-color 50000s ease-in-out 0s;
}

.emotion-1:is(:focus-visible, [data-focus-visible=true]):not(:disabled, [data-disabled=true])+*::before {
  outline: var(--nui-borders-md) var(--nui-colors-blue-primary);
  outline-offset: var(--nui-spaces-0-5);
}

.emotion-1:is(:hover, [data-hover=true]):not(:disabled, [data-disabled=true])+*::before {
  border-color: var(--nui-colors-gray-secondary);
}

.emotion-2 {
  position: relative;
  color: var(--nui-colors-blue-contrast-text);
  width: var(--nui-sizes-5);
  height: var(--nui-sizes-5);
  font-size: var(--nui-font-sizes-sm);
}

.emotion-2::before {
  content: "";
  position: absolute;
  inset: 0;
  border: var(--nui-borders-md);
  border-color: var(--nui-colors-gray-highlight);
  background: transparent;
  z-index: -2;
  -webkit-transition: var(--nui-transitions-colors);
  transition: var(--nui-transitions-colors);
  border-radius: calc(var(--nui-radii-xl) * .6);
}

.emotion-2::after {
  content: "";
  position: absolute;
  inset: 0;
  background-color: var(--nui-colors-blue-primary);
  opacity: 0;
  z-index: -1;
  -webkit-transition: var(--nui-transitions-all);
  transition: var(--nui-transitions-all);
  transition-timing-function: linear;
  -webkit-transform: scale(0.4);
  -moz-transform: scale(0.4);
  -ms-transform: scale(0.4);
  transform: scale(0.4);
  border-radius: calc(var(--nui-radii-xl) * .6);
}

.emotion-3 {
  -webkit-margin-start: var(--nui-spaces-2);
  margin-inline-start: var(--nui-spaces-2);
  font-size: var(--nui-font-sizes-md);
}

<label
  class="nui-checkbox-root emotion-0"
  data-checked="false"
  data-color="blue"
  data-disable-animation="false"
  data-disabled="false"
  data-in-group="false"
  data-indeterminate="false"
  data-radius="md"
  data-size="md"
>
  <input
    aria-label="Checkbox"
    aria-labelledby="checkbox-_r_o_-label"
    class="nui-checkbox-input emotion-1"
    tabindex="0"
    type="checkbox"
  />
  <span
    class="nui-checkbox-icon emotion-2"
  >
    <svg
      aria-hidden="true"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m7 12.9l3.143 3.6L18 7.5"
        opacity="0"
        pathLength="1"
        stroke-dasharray="0px 1px"
        stroke-dashoffset="0px"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <span
    class="nui-checkbox-label emotion-3"
    id="checkbox-_r_o_-label"
  >
    Checkbox
  </span>
</label>
`;
